force-app/main/default/objects/Profile__c/fields/CurrentAccount__c.field-meta.xml
<CustomField>
    <fullName>CurrentAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Текущая Организация</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>