force-app/main/default/objects/Profile__c/fields/IsCreated__c.field-meta.xml
<CustomField>
    <fullName>IsCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Created</label>
    <type>Checkbox</type>
</CustomField>