force-app/main/default/objects/Profile__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Статус</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Анкета отправлена</fullName>
            </value>
            <value>
                <fullName>Анкета повторно отправлена</fullName>
            </value>
            <value>
                <fullName>Анкета получена</fullName>
            </value>
            <value>
                <fullName>Анкета согласована</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>